--- a/assign1/assign1.tex
+++ b/assign1/assign1.tex
@@ -182,7 +182,7 @@ columns=fullflexible
 	Probability Assignment 1(12.13.4.11)
 %	}
 }
-\author{ Saketh Ram Kumar Dondapati(AI22BTECH11023)% <-this % stops a space
+\author{ Saketh Ram Kumar Dondapati(AI22BTECH11023)*% <-this % stops a space
 	\thanks{*The author is with the Department
 		of Artificial Intelligence, Indian Institute of Technology, Hyderabad
 		502285 India e-mail:  ai22btech11023@iith.ac.in.}
@@ -298,40 +298,27 @@ columns=fullflexible
 \subsection*{Question}
 Two dice are thrown simultaneously, if X denotes number of sixes, find the expectation of X
 \subsection*{Solution}
-Let X be the random variable which represents the number of sixes when two dice are thrown together.\\
-$  X = \cbrak{0,1,2}$, there can be 0,1 or 2 sixes \\
-Assuming the dice are fair,\\
-\begin{align}
-  \pr{X=0}=\frac{25}{36}
+Clearly X follows a binomial distribution\\
+\begin{align} 
+	X \sim Bin(2,1/6) 
 \end{align}
+%Assuming the dice are fair,\\
 %Since $\frac{5}{6}$ is the probability of not getting a six on a dice\\ 
-\begin{align}
-\pr{X=2}=\frac{1}{36}
-\end{align}
-%since $\frac{1}{6}$ is the probability of getting a 6 in each dice roll.\\ \\
-\begin{align}
-	\pr{X=1}=1-\pr{X=0}-\pr{X=2}
-\end{align}
-\begin{align}
-=1-\frac{25}{36}-\frac{1}{36}
-\end{align}
-\begin{align}
-=\frac{5}{18}
-\end{align}
+%since $\frac{1}{6}$ is the probability of getting a 6 in each dice roll.\\ 
 %since the number of sixes can only be 0,1 or 2, the total probability will be 1\\ \\
-\\
-The expectation can be calculated as: \\ 
+
 \begin{align}
-E(X)=\sum_{i=0}^{2} i\pr{X=i}
+	E(X)&=np
 \end{align}
 \begin{align}
-E(X)=0.\frac{25}{36}+1.\frac{5}{18}+2.\frac{1}{36}
+	&=2.\frac{1}{6}
 \end{align}
 \begin{align}
-E(X)=\frac{1}{3}=0.33
+	&=0.33
 \end{align}
+
 %\section{Chemistry}
 %\begin{enumerate}[label=\arabic*.,ref=\thesection.\theenumi]
 %\numberwithin{equation}{enumi}
 \end{document}
-d
+
