--- a/assign1/assign1.tex
+++ b/assign1/assign1.tex
@@ -316,7 +316,7 @@ Clearly X follows a binomial distribution\\
 \begin{align}
 	&=0.33
 \end{align}
-Proof of (2)
+(2) can be shown using z transform:
 \begin{align}
 M_{X_i}(z) &= E(z^{-X_i}) = \sum_{k=-\infty}^{\infty} P_{X_i}(k)z^{-k}
 \end{align}
